Upload file to FTP

--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -60,7 +60,7 @@ jobs:
           jarNames="${{ steps.ftp_files.outputs.jarName }}"
           IFS=' ' read -ra jarNamesArray <<< "$jarNames"
           
-          arrayNames="${{len(jarNamesArray)}}"
+          arrayNames="${{jarNamesArray.length}}"
           echo "Array Name: $arrayNames"
           
           for jarName in "${jarNamesArray[@]}"
