Upload file to FTP

--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -64,7 +64,7 @@ jobs:
           
           for jarName in "${jarNamesArray[@]}"
           do
-            namesLength="${{$namesLength + 1}"
+            namesLength="${{$namesLength + 1}}"
           done
           
           echo "Number of changed modules: $namesLength"
