--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -65,7 +65,7 @@ jobs:
           
           for jarName in "${jarNamesArray[@]}"
           do
-            namesLength=${{1 + 1}}
+            namesLength=${{50}}
           done
           
           echo "Number of changed modules: $namesLength"
