--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -30,6 +30,7 @@ jobs:
           list=$(git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq | sed 's/\/$//' | tr '\n' ',' | sed 's/,$//')
           echo "Modules changed: $list"
           echo "modules=$list" >> $GITHUB_OUTPUT
+          echo "modulesEnv=$list" >> GITHUB_ENV
 
       # Build the changed modules using Maven
       - name: Build Projects
@@ -107,7 +108,7 @@ jobs:
       - name: Retrieve Filename and Path
         id: ftpFiles
         run: |
-          modules="${{ steps.list_modules.outputs.modules }}"
+          modules="${{ env.modulesEnv }}"
 
           #Attribute modules names into an array
           IFS=',' read -ra modules_array <<< "$modules"
