--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -54,7 +54,7 @@ jobs:
           #git checkout develop
           
           # Fetch all tags from the repository.
-          git fetch origin develop --tags 
+          git fetch origin develop --force --tags 
           
           # Get the latest release tag.
           latest_tag=$(git describe --abbrev=0 --tags)
