Testing new resilience

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -116,9 +116,9 @@ jobs:
         run: |
           
           # Get the name of all changed modules
-          changedModules = "${{ steps.ftpFiles.outputs.allChangedModules }}"
+          changedModules=$(echo "${{ steps.ftpFiles.outputs.allChangedModules }}")
           IFS=' ' read -ra allChangedModules <<< "$changedModules"
-          echo "Module Names: $allChangedModules"
+          echo "Module Names: ${allChangedModules[@]}"
           
           tag=${{ steps.increment_tag.outputs.new_tag }}
           echo "Tag name: $tag"
