Testing new resilience

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -156,7 +156,7 @@ jobs:
         with:
           host: reposit.jitterbit.com
           username: gabriel.goncalves
-          password: Netgear01@#!$
+          password: Rafael@10
           localDir: './${{ steps.createFolders.outputs.targetFolder }}/target/filesToUpload'
           remoteDir: './Builds/connectors/CDATA/test/uploadedFile'
 
