--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -35,7 +35,7 @@ jobs:
           fi
           
           if $commonChanged; then
-            allModules=$(find ./ -type f -name '*-connector*' | awk -F/ '{print $(NF)}' | uniq)
+            allModules=$(find automation/ -type f -name '*-connector*' | awk -F/ '{print $(NF)}' | uniq)
             for module in $(echo $list | tr ',' ' '); do
               if echo $module | grep -qE ".*-connector.*"; then
                 allModules=$(echo $allModules | sed "s/\b$module\b//g")
@@ -51,8 +51,7 @@ jobs:
 
           fi
           
-          
-  
+          echo "All Filtered Modules: $allModules"
           echo "commonFlag=$commonChanged" >> $GITHUB_OUTPUT
           echo "modules=$list" >> $GITHUB_OUTPUT
           echo "filteredModules=$allModules" >> $GITHUB_OUTPUT
