Testing new resilience

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -32,9 +32,11 @@ jobs:
           
           commonChanged=false
           if echo $list | grep -Eq "/common\b"; then
+            echo "Entrou no if"
             commonChanged=true
           fi
-        
+
+
           echo "valor de commonChanged: $commonChanged"
 
           
